# Pixelate

./: .gitignore  CMakeLists.txt  Pixelate.uproject  clear.py
Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
Content/Assets/Audio/: TwinStickFire.uasset
Content/Assets/Maps/: Main_BuiltData.uasset  Menu.umap  Menu_BuiltData.uasset  TeamDeathMatch_BuiltData.uasset
Content/Assets/Meshes/: BaseMaterial.uasset  Ship.uasset  TwinStickProjectile.uasset  TwinStickUFO.uasset
Content/Blueprints/: MainGameModeBP.uasset  MainGameStateBP.uasset  MainMenu.uasset  MatchMaking.uasset  PixelateGameMode.uasset  PixelateInstance.uasset  PlayerControllerBP.uasset  TwinStickOverview.uasset
Content/Blueprints/Character/: PixelateCharacterBP.uasset  PixelatePawnBP.uasset
Content/Blueprints/GameMode/: PixelateGameModeBP.uasset
Content/Blueprints/HUD/: FindHost.uasset  Lobby.uasset  MainMenu.uasset  MatchMaking.uasset  PixelateButton.uasset  PlayerColorWidget.uasset  PlayerWidget.uasset  TwinStickOverview.uasset  UserWidget.uasset
Content/Blueprints/Maps/: MainMenuMap.umap  MainMenuMap_BuiltData.uasset  StarWarsMap_BuiltData.uasset
Content/Blueprints/Materials/: 8Bit.uasset  8Bit_Inst.uasset  BlueMaterial.uasset  White.uasset  (+3 more)
Content/TwinStick/: GameModeBlueprint.uasset
Source/: Pixelate.Target.cs  PixelateEditor.Target.cs
Source/Pixelate/: Pixelate.Build.cs  Pixelate.cpp  Pixelate.h  PixelateCharacter.cpp  PixelateCharacter.h  PixelateController.cpp  PixelateController.h  PixelateGameMode.cpp  PixelateGameMode.h  PixelatePawn.cpp  PixelatePawn.h  PixelateProjectile.cpp  PixelateProjectile.h
Temporal/: PixelateFactoryPlayerStart.cpp  PixelateFactoryPlayerStart.h
docs/: index.md
source/: main.cpp
(+37 files in other folders)
